--- a/client/src/components/userList/UserList.css
+++ b/client/src/components/userList/UserList.css
@@ -1,18 +1,17 @@
-.users-list {
-    list-style: none;
-    margin: 0 auto;
-    padding: 0;
-    width: 90%;
-    max-width: 50rem;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
+.user-list {
+  padding: 20px;
+}
 
-  .center
-{
-  color: white;
-  font-size: 45px;
-  line-height: 1.5;
-  margin: 10px 0;
+.user-items-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.center {
+  text-align: center;
+}
+
+.user-item {
+  margin: 10px;
 }
