--- a/client/src/pages/users/Users.css
+++ b/client/src/pages/users/Users.css
@@ -11,5 +11,5 @@
 
   .h2
 {
-  color: blanchedalmond;
+  color: rgb(255, 255, 255);
 }
